# Coding-language

./: .gitignore
Arkanoid/: .~lock.Arkanoid.docx#  Arkanoid.docx  Ball.hpp  Battlefield.hpp  CMakeLists.txt  Grid.hpp  Makefile  Plarform.hpp  Square.hpp  bonus.hpp  const.hpp  game  main.cpp
Arkanoid/ include/: Battlefield.hpp
Arkanoid/include/: Ball.hpp  Battlefield.hpp  Bonus.hpp  Grid.hpp  Platform.hpp  RenderText.hpp  const.hpp  main.hpp
Arkanoid/src/: Ball.cpp  Ball.hpp  Battlefield.cpp  Battlefield.hpp  Bonus.cpp  Grid.cpp  Grid.hpp  Plarform.cpp  Plarform.hpp  Platform.cpp  RenderText.cpp  bonus.cpp  bonus.hpp  const.hpp  main.cpp
GEMS/: .~lock.GEMS.docx#  game  main.cpp  Пустой документ
GEMS/include/: bonus.hpp
GEMS/src/: changesGrid.cpp  draw.cpp
Gems/: CMakeLists.txt  main.cpp
Gems/include/: changesGrid.hpp  const.hpp  draw.hpp  moveSquare.hpp
Gems/src/: bonus.cpp  main.cpp  moveSquare.cpp
lab_1/: CMakeLists.txt  Makefile  my_program.cpp
lab_1/include/: Equation.hpp  Input.hpp  const.hpp  main.hpp
lab_1/src/: Equation.cpp  Input.cpp  main.cpp
lab_2/: CMakeLists.txt  Student.hpp  craft.cpp  input.txt  main.cpp
lab_2/include/: Coefficients.hpp  Human.hpp  Student.hpp  Teacher.hpp  const.hpp  main.hpp  readFile.hpp
lab_2/src/: Human.cpp  Student.cpp  Teacher.cpp  craft.cpp  main.cpp  readFile.cpp
